--- a/rfid_dash_test.service
+++ b/rfid_dash_test.service
@@ -8,8 +8,8 @@ WorkingDirectory=/home/tim/test_rfidpi
 ExecStart=/home/tim/test_rfidpi/start.sh
 Restart=always
 RestartSec=5
-StandardOutput=append:/var/log/rfid_dash.log
-StandardError=append:/var/log/rfid_dash.log
+StandardOutput=append:/var/log/rfid_dash_test.log
+StandardError=append:/var/log/rfid_dash_test.log
 
 [Install]
 WantedBy=multi-user.target
