--- a/rfid_dash_test.service
+++ b/rfid_dash_test.service
@@ -6,8 +6,8 @@ After=network.target
 User=tim
 WorkingDirectory=/home/tim/test_rfidpi
 ExecStart=/home/tim/test_rfidpi/start.sh
-Restart=always
-RestartSec=5
+#Restart=always
+#RestartSec=5
 StandardOutput=append:/var/log/rfid_dash.log
 StandardError=append:/var/log/rfid_dash.log
 
